# null-space

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TASK_7_5_IMPLEMENTATION_SUMMARY.md
.github/workflows/: README.md  ci.yml  coverage.yml  release.yml  security.yml
core/null-space-core/: Cargo.toml
core/null-space-core/src/: crypto.rs  ffi.rs  lib.rs  models.rs  search.rs  storage.rs  vault.rs
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md
scripts/: README.md  build_all.sh  build_android.sh  build_ios.sh  build_macos.sh  build_windows.ps1
ui/null_space_app/: .gitignore  IMPLEMENTATION_SUMMARY.md  PLATFORM.md  TASK_4_3_IMPLEMENTATION_SUMMARY.md  TASK_4_4_IMPLEMENTATION_SUMMARY.md  TASK_5_1_IMPLEMENTATION_SUMMARY.md  TASK_5_2_IMPLEMENTATION_SUMMARY.md  TASK_6_2_IMPLEMENTATION_SUMMARY.md  TASK_7_1_IMPLEMENTATION_SUMMARY.md  TASK_7_2_IMPLEMENTATION_SUMMARY.md  TASK_7_3_IMPLEMENTATION_SUMMARY.md  TASK_7_4_IMPLEMENTATION_SUMMARY.md  pubspec.yaml
ui/null_space_app/android/: settings.gradle
ui/null_space_app/android/app/: build.gradle
ui/null_space_app/ios/: .gitattributes  .gitignore
ui/null_space_app/ios/Runner/: Info.plist
ui/null_space_app/lib/: main.dart
ui/null_space_app/lib/bridge/: rust_bridge.dart
ui/null_space_app/lib/l10n/: app_en.arb  app_ja.arb  app_ko.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_ja.dart  app_localizations_ko.dart  app_localizations_zh.dart  app_zh.arb  app_zh_Hant.arb
ui/null_space_app/lib/models/: note.dart  vault.dart
ui/null_space_app/lib/providers/: note_provider.dart  search_provider.dart  settings_provider.dart  (+1 more)
ui/null_space_app/macos/: .gitignore
ui/null_space_app/windows/: CMakeLists.txt
(+70 files in other folders)
