[workspace]
members = [
    "core/null-space-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Null Space Contributors"]
license = "MIT"
repository = "https://github.com/shaolonger/null-space"

[workspace.dependencies]
# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = "1.7"

# Search
tantivy = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# File I/O
zip = "0.6"
walkdir = "2.4"

# Async
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
